@@ -1,11 +1,11 @@
 <project name="mpartial" url="http://github.com/massiveinteractive/mpartial" license="MIT">
 	<user name="default.user"/>
 	<description>A Haxe macro library for implementing platform specific partial classes, simplifying cross platform code. Supports AVM1, AVM2, JavaScript, Neko and C++.</description>
-	<version name="1.0.0">1.0 Release. Changes include <ul>
+	<version name="1.0.0"><![CDATA[1.0 Release. Changes include <ul>
 		<li>metadata renamed from @Partial* to @:partial*</li>
 		<li>Added var/property field partials (@:partialReplace and @:partialFinal - see readme for rules)</li>
-		<li>Added additional compiler macro (<code>--macro mpartial.PartialsMacro.append(['foo']</code>) to append custom targets after default ones</li>
-		</ul><br></br>See CHANGES.txt for more info.</version>
+		<li>Added mpartial.PartialsMacro.append compiler macro for appending custom targets to default ones</li>
+		</ul><br></br>See CHANGES.txt for more info.]]></version>
 	<depends name="mconsole"/>
 	<tag v="macro"/>
 	<tag v="cross"/>
