@@ -7,6 +7,8 @@
 - debug target is now always included in configure/append macro if -debug flag is set
 - changed generated class directory to .temp/mpartial (was /gen-partials)
 - updated mtask build scripts
+- cleaned up debug logging output
+- added check for inheritance of mpartial.Partial interface
 
 0.9.1		fixed Issue #1 macro regexp issue introduced by Haxe 2.10 
 0.9.0		Initial public release candidate
